[gd_scene load_steps=13 format=3 uid="uid://cijuon2dnkqli"]

[ext_resource type="Script" uid="uid://cmflp4igeogf1" path="res://Games/UnderworldPlatformer/Assets/Scripts/UnderworldCollectible.gd" id="1_qq1ox"]
[ext_resource type="Texture2D" uid="uid://ce0uw36gvenqq" path="res://Games/UnderworldPlatformer/Arta/Tilemap/Individual/041.png" id="2_qq1ox"]
[ext_resource type="AudioStream" uid="uid://dr6acf1p7u3l8" path="res://Games/UnderworldPlatformer/Arta/Sunet/Coin/coin_1.wav" id="3_yoemw"]
[ext_resource type="AudioStream" uid="uid://b2n54tc0ds1g6" path="res://Games/UnderworldPlatformer/Arta/Sunet/Coin/coin_2.wav" id="4_i5yrj"]
[ext_resource type="AudioStream" uid="uid://dagksnc3nr5fs" path="res://Games/UnderworldPlatformer/Arta/Sunet/Coin/coin_3.wav" id="5_1pyd2"]
[ext_resource type="AudioStream" uid="uid://3ld3tp4q3cwa" path="res://Games/UnderworldPlatformer/Arta/Sunet/Coin/coin_4.wav" id="6_2dxrn"]
[ext_resource type="AudioStream" uid="uid://dfn6u7eb374jt" path="res://Games/UnderworldPlatformer/Arta/Sunet/Coin/coin_5.wav" id="7_10iwe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ejw76"]
size = Vector2(14, 14)

[sub_resource type="Animation" id="Animation_hoe1y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_c6que"]
resource_name = "default"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1.51572, 1, 1.41421, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 1), Vector2(0, 0), Vector2(0, -1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_16v10"]
_data = {
&"RESET": SubResource("Animation_hoe1y"),
&"default": SubResource("Animation_c6que")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_wm4ua"]
playback_mode = 1
random_pitch = 1.21
streams_count = 5
stream_0/stream = ExtResource("3_yoemw")
stream_1/stream = ExtResource("4_i5yrj")
stream_2/stream = ExtResource("5_1pyd2")
stream_3/stream = ExtResource("6_2dxrn")
stream_4/stream = ExtResource("7_10iwe")

[node name="Collectible" type="Area2D" groups=["Collectible"]]
script = ExtResource("1_qq1ox")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ejw76")

[node name="CollectibleSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_qq1ox")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CollectibleSprite"]
libraries = {
&"": SubResource("AnimationLibrary_16v10")
}
autoplay = "default"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_wm4ua")
volume_db = -7.518

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
